--- a/Maidan/Maidan/Views/Member/Index.cshtml
+++ b/Maidan/Maidan/Views/Member/Index.cshtml
@@ -17,11 +17,12 @@
 		foreach (var item in Model)
         {
             <div class="card my-4">
-                <div class="card-header">
-                    <img src="/images/authorImages/@authors[i].Photo" width="20" class="rounded-circle" /> @authors[i].UserName
-                </div>
+                
                 <div class="row">
                     <div class="col-md-9">
+						<div class="card-header">
+							<a asp-action="GetAuthor" asp-route-userName="@authors[i].UserName"><img src="/images/authorImages/@authors[i].Photo" width="20" class="rounded-circle" /> @authors[i].UserName</a>
+						</div>
                         <div class="card-body">
 
                             <a asp-action="GetArticle" asp-route-id="@item.Id"><h5 class="card-title">@item.Title</h5></a>
