--- a/Maidan/Maidan/Views/Shared/_AdminNavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_AdminNavBarPartialView.cshtml
@@ -20,6 +20,9 @@
                     <!-- Begin Menu -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item m-2">
+                            <a class="nav-link" asp-action="ListArticles" asp-controller="Admin" asp-area="Admin">List Articles</a>
+                        </li>
+                        <li class="nav-item m-2">
                             <a class="nav-link" asp-action="AddTag" asp-controller="Admin" asp-area="Admin">Add New Tag</a>
                         </li>
                         <li class="nav-item m-2">
