--- a/Maidan/Maidan/Views/Member/ChangePassword.cshtml
+++ b/Maidan/Maidan/Views/Member/ChangePassword.cshtml
@@ -5,7 +5,7 @@
         <h3 class="mb-0">Change Password</h3>
     </div>
     <div class="card-body">
-        <form class="form" role="form" autocomplete="off">
+        <form asp-action="ChangePassword" asp-controller="Member" autocomplete="off" method="post">
             <input type="hidden" asp-for="Id"/>
             <div class="form-group">
                 <label asp-for="CurrentPassword">Current Password</label>
@@ -21,15 +21,15 @@
                 <span asp-validation-for="NewPassword"></span>
             </div>
             <div class="form-group">
-                <label for="inputPasswordNewVerify">Verify</label>
-                <input type="password" class="form-control" id="inputPasswordNewVerify" required="" placeholder="Passsword confirm">
+                <label asp-for="PasswordConfirm">Verify</label>
+                <input asp-for="PasswordConfirm" type="password" class="form-control" placeholder="Passsword confirm">
                 <span class="form-text small text-muted">
                     To confirm, type the new password again.
                 </span>
                 <span asp-validation-for="PasswordConfirm"></span>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-success btn-lg float-right">Save</button>
+                <button type="submit" class="btn btn-success btn-lg float-right">Save Change</button>
             </div>
         </form>
     </div>
