--- a/Maidan/Maidan/Views/Member/MyProfile.cshtml
+++ b/Maidan/Maidan/Views/Member/MyProfile.cshtml
@@ -1,58 +1,61 @@
 ﻿@model MyProfileViewModel
-<style>
-    #tags {
-        padding: 0 20px
-    }
-
-        #tags:last-child {
-            border-bottom: 1px solid #BBB;
+@section Css{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        #tags {
+            padding: 0 20px
         }
 
-        #tags > input {
-            display: none;
-        }
+            #tags:last-child {
+                border-bottom: 1px solid #BBB;
+            }
 
-        #tags i {
-            display: inline-block;
-            float: right;
-            padding: 2px;
-            width: 40px;
-            height: 20px;
-            border-radius: 13px;
-            vertical-align: middle;
-            -webkit-transition: .25s .09s;
-            transition: .25s .09s;
-            position: relative;
-            background: #d8d9db;
-            box-sizing: initial;
-        }
+            #tags > input {
+                display: none;
+            }
 
-            #tags i:after {
-                content: " ";
-                display: block;
-                width: 20px;
+            #tags i {
+                display: inline-block;
+                float: right;
+                padding: 2px;
+                width: 40px;
                 height: 20px;
-                border-radius: 50%;
-                background: #fff;
-                position: absolute;
-                left: 2px;
-                -webkit-transition: .25s;
-                transition: .25s;
+                border-radius: 13px;
+                vertical-align: middle;
+                -webkit-transition: .25s .09s;
+                transition: .25s .09s;
+                position: relative;
+                background: #d8d9db;
+                box-sizing: initial;
             }
 
-        #tags > input:checked + i {
-            background: #4bd865;
-        }
+                #tags i:after {
+                    content: " ";
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background: #fff;
+                    position: absolute;
+                    left: 2px;
+                    -webkit-transition: .25s;
+                    transition: .25s;
+                }
 
-            #tags > input:checked + i:after {
-                -webkit-transform: translateX(20px);
-                transform: translateX(20px);
+            #tags > input:checked + i {
+                background: #4bd865;
             }
 
-        #tags:hover {
-            cursor: pointer;
-        }
-</style>
+                #tags > input:checked + i:after {
+                    -webkit-transform: translateX(20px);
+                    transform: translateX(20px);
+                }
+
+            #tags:hover {
+                cursor: pointer;
+            }
+    </style>
+}
 
 
 @{
@@ -73,16 +76,16 @@
     }
 }
 @{
-    if (TempData["ChangePassword"] != null && (TempData["ChangePassword"]).ToString().ToLower().Contains("success"))
+    if (TempData["PasswordChange"] != null && (TempData["PasswordChange"]).ToString().ToLower().Contains("success"))
     {
         <div class="alert alert-success">
-            <h3>@TempData["ChangePassword"]</h3>
+            <h3>@TempData["PasswordChange"]</h3>
         </div>
     }
-    else if (TempData["ChangePassword"] != null && (TempData["ChangePassword"]).ToString().ToLower().Contains("error"))
+    else if (TempData["PasswordChange"] != null && (TempData["PasswordChange"]).ToString().ToLower().Contains("error"))
     {
         <div class="alert alert-danger">
-            <h3>@TempData["ChangePassword"]</h3>
+            <h3>@TempData["PasswordChange"]</h3>
         </div>
     }
 }
@@ -201,31 +204,33 @@
         </form>
     </div>
 </div>
-@*<div class="row">
-    <a asp-action="ChangePassword" asp-controller="Member" asp-route-id="@Model.Id">Do you want a change password?</a>
-</div>*@
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="row my-4">
+    <a class="btn btn-danger" asp-action="ChangePassword" asp-controller="Member" asp-route-id="@Model.Id">Do you want a change password?</a>
+</div>
+<div class="row my-4">
+    <a class="btn btn-warning" asp-action="Index">Back to List Without Changes</a>
 </div>
 
-<script>
-    $(function () {
-        //select2 eklentimizin tanımı
-        $('#select2').select2();
-        //hepsiniSec kodlarımız
-        $("#chooseAll").on("click", function () {
-            if ($(this).is(':checked')) {
-                $("#select2 > option").prop("selected", "selected");
-                $("#select2").trigger("change");
-            }
-            else {
-                $("#select2 > option").removeAttr("selected");
-                $("#select2").trigger("change");
-            }
-        });
-    });
-</script>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js" integrity="sha512-RtZU3AyMVArmHLiW0suEZ9McadTdegwbgtiQl5Qqo9kunkVg1ofwueXD8/8wv3Af8jkME3DDe3yLfR8HSJfT2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(function () {
+            //select2 eklentimizin tanımı
+            $('#select2').select2();
+            //hepsiniSec kodlarımız
+            $("#chooseAll").on("click", function () {
+                if ($(this).is(':checked')) {
+                    $("#select2 > option").prop("selected", "selected");
+                    $("#select2").trigger("change");
+                }
+                else {
+                    $("#select2 > option").removeAttr("selected");
+                    $("#select2").trigger("change");
+                }
+            });
+        });
+    </script>
 }
