--- a/Maidan/Maidan/Views/Shared/_LayoutAdmin.cshtml
+++ b/Maidan/Maidan/Views/Shared/_LayoutAdmin.cshtml
@@ -44,16 +44,13 @@
 </body>
 <!-- Begin Footer
    ================================================== -->
-<footer class="container footer position-static">
-    <div>
-        <p class="pull-left">
-            Copyright &copy; 2017 Your Website Name
-        </p>
-        <p class="pull-right">
-            Mediumish Theme by <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a>
-        </p>
-    </div>
-
+<footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a asp-action="Index" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a asp-action="Membership" asp-controller="Home" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a asp-action="AboutUs" asp-controller="Home" class="nav-link px-2 text-muted">About</a></li>
+    </ul>
+    <p class="text-center text-muted">© 2023 Maidan, Inc</p>
 </footer>
 <!-- End Footer
 ================================================== -->
